; ModuleID = '/home/carl/AnghaBench/freebsd/sys/opencrypto/extr_criov.c_crypto_apply.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/opencrypto/extr_criov.c_crypto_apply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32 }
%struct.uio = type { i32 }

@CRYPTO_F_IMBUF = common dso_local global i32 0, align 4
@CRYPTO_F_IOV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_apply(i32 %0, i64 %1, i32 %2, i32 %3, i32 (i8*, i8*, i32)* %4, i8* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32 (i8*, i8*, i32)*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i64 %1, i64* %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 (i8*, i8*, i32)* %4, i32 (i8*, i8*, i32)** %11, align 8
  store i8* %5, i8** %12, align 8
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* @CRYPTO_F_IMBUF, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %26

18:                                               ; preds = %6
  %19 = load i64, i64* %8, align 8
  %20 = inttoptr i64 %19 to %struct.mbuf*
  %21 = load i32, i32* %9, align 4
  %22 = load i32, i32* %10, align 4
  %23 = load i32 (i8*, i8*, i32)*, i32 (i8*, i8*, i32)** %11, align 8
  %24 = load i8*, i8** %12, align 8
  %25 = call i32 @m_apply(%struct.mbuf* %20, i32 %21, i32 %22, i32 (i8*, i8*, i32)* %23, i8* %24)
  store i32 %25, i32* %13, align 4
  br label %50

26:                                               ; preds = %6
  %27 = load i32, i32* %7, align 4
  %28 = load i32, i32* @CRYPTO_F_IOV, align 4
  %29 = and i32 %27, %28
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %39

31:                                               ; preds = %26
  %32 = load i64, i64* %8, align 8
  %33 = inttoptr i64 %32 to %struct.uio*
  %34 = load i32, i32* %9, align 4
  %35 = load i32, i32* %10, align 4
  %36 = load i32 (i8*, i8*, i32)*, i32 (i8*, i8*, i32)** %11, align 8
  %37 = load i8*, i8** %12, align 8
  %38 = call i32 @cuio_apply(%struct.uio* %33, i32 %34, i32 %35, i32 (i8*, i8*, i32)* %36, i8* %37)
  store i32 %38, i32* %13, align 4
  br label %49

39:                                               ; preds = %26
  %40 = load i32 (i8*, i8*, i32)*, i32 (i8*, i8*, i32)** %11, align 8
  %41 = load i8*, i8** %12, align 8
  %42 = load i64, i64* %8, align 8
  %43 = load i32, i32* %9, align 4
  %44 = sext i32 %43 to i64
  %45 = add nsw i64 %42, %44
  %46 = inttoptr i64 %45 to i8*
  %47 = load i32, i32* %10, align 4
  %48 = call i32 %40(i8* %41, i8* %46, i32 %47)
  store i32 %48, i32* %13, align 4
  br label %49

49:                                               ; preds = %39, %31
  br label %50

50:                                               ; preds = %49, %18
  %51 = load i32, i32* %13, align 4
  ret i32 %51
}

declare dso_local i32 @m_apply(%struct.mbuf*, i32, i32, i32 (i8*, i8*, i32)*, i8*) #1

declare dso_local i32 @cuio_apply(%struct.uio*, i32, i32, i32 (i8*, i8*, i32)*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
